# readms

./: .gitignore  README.md  pyproject.toml
readms/: __init__.py  logging.ini  mboxpst.py  metapst.py  metaxl.py  pstmbox.py  pstwrap.py  readmsg.py  readole.py  readpst.py  readutl.py  readxl.py  tags.py
readms/papers/: Excel97-2007-Binary-Format.txt  MS-OXPROPS.txt  stopwords.txt
