[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "readms"
dynamic = ["version"]
description = "MSOffice Readers (PST, Excel)"
authors = [
    { name = "Dimitar Dimitrov", email = "ddimitrov4217@gmail.com" },
]

dependencies = [
    "click",
    "pytz",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Public Domain",
    "Natural Language :: Bulgarian",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = ""

[tool.hatch.build.targets.sdist]
include = [
    "/readms",
]

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.next-version]
method = "smallest"

[tool.versioningit.format]
distance = "{base_version}.post{distance}"
distance-dirty = "{base_version}.dev{distance}"
dirty = "{base_version}.dev{distance}"

[tool.ruff]
line-length = 92
output-format = "grouped"

[tool.ruff.format]
preview = true
# quote-style = "single"

[tool.ruff.lint]
preview = false  # без все още нестабилните правила
allowed-confusables = ["а", "с", "е", "г", "о", "Н", "Е", "С", "З", "Р", "р", "В", "в"]
ignore = [
    "T201",    # модула извежда информация на командна линия
    "SLF001",  # Private member accessed ; FIXME: Това да се оправи някога
    "S101",    # Use of assert detected ; FIXME: Останало от python2, да се изчисти

    "N802", # Function name ... should be lowercase
    "N806", # Variable ... in function should be lowercase
    "N816", # Variable ... in global scope should not be mixedCase
    # NOTE: Направени са така за да отговарят на имената от спецификацията на PST

    "PLR2004", # Magic value used in comparison, consider replacing ... with a constant variable
    # NOTE: Модула се изпозлва за парсване на зададени от спецификация binary структури и
    # използваните са от тази спецификация; почти всички се използват еднократно в
    # съответната функция

    "S301", # pickle and modules that wrap it can be unsafe when used to deserialize untrusted
    # data, possible security issue
    # NOTE: Това са данните за индексите на pst файловете; генерират се от самата програма,
    # не идват от никъде от вън; структурите които се използват не са най-подходящи за json
    # или нещо не толкова python native; TODO: Все пак някаква сигурна чек сума (HMAC
    # например) може да се направи по някое време с нисък приоритет;

    "DTZ006", # datetime.datetime.fromtimestamp() called without a tz argument
    "DTZ005", # datetime.datetime.now() called without a tz argument
    # TODO Това да се прегледа по-подробно, но вероятно не е необходимо да се ползва TZ

    "FBT002", # Boolean default positional argument in function definition
    # Това не разбирам защо е такъв проблем; TODO Взе пак да се погледнат тези 13 са
]
mccabe.max-complexity = 10  # по подразбиране е 10

[tool.ruff.lint.extend-per-file-ignores]
# "docs/.hooks/*" = ["INP001", "T201"]

[tool.ruff.lint.isort]
known-first-party = ["foo", "_"]

[tool.hatch.envs.test.scripts]
mbox = "python -um readms.mboxpst {args:.}"

# vim:ft=toml:ts=4:sw=4:tw=92:et
